manifest, spacing and input fixes

--- a/src/scss/vars/_fonts.scss
+++ b/src/scss/vars/_fonts.scss
@@ -8,6 +8,7 @@ $button-sizes: (
 
 $logo-size: (
   mobile: 50px,
+  mobile-large: 70px,
   tablet: 85px,
   desktop: 65px
 )
